fix font on firefox =>text-transform

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -89,7 +89,6 @@ h1 {
 header {
     text-align: center;
     color: white;
-    text-transform: full-width;
     text-shadow: 1px 1px 0.5em black;
     background-position:center;    
     background-size: cover;
